--- a/BitMapLoader.vcxproj
+++ b/BitMapLoader.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="bitScreen.h" />
     <ClInclude Include="Dependencies.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="objectLoader.h" />
@@ -154,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BitMapLoader.cpp" />
+    <ClCompile Include="bitScreen.cpp" />
     <ClCompile Include="objectLoader.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
