--- a/BitMapLoader.vcxproj.filters
+++ b/BitMapLoader.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Dependencies.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="bitScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BitMapLoader.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="objectLoader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="bitScreen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
